--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -6,13 +6,9 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
   build:
@@ -26,12 +22,24 @@ jobs:
       - name: Debug Info
         run: |
           echo "Current directory: $(pwd)"
+          echo "Directory contents:"
           ls -la
-          echo "Contents of index.html:"
-          head -n 5 index.html
+          echo "Git status:"
+          git status
+          echo "Git branch:"
+          git branch
+          echo "First few lines of index.html:"
+          head -n 10 index.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
+        with:
+          enablement: true
+
+      - name: Build
+        run: |
+          echo "Building site..."
+          # Add any build steps here if needed
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
@@ -39,11 +47,11 @@ jobs:
           path: '.'
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
