--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -9,50 +9,37 @@ permissions:
   contents: write
   pages: write
   id-token: write
+  deployments: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Debug Info
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Directory contents:"
-          ls -la
-          echo "Git status:"
-          git status
-          echo "Git branch:"
-          git branch
-          echo "First few lines of index.html:"
-          head -n 10 index.html
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-        with:
-          enablement: true
-
-      - name: Build
-        run: |
-          echo "Building site..."
-          # Add any build steps here if needed
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: '.'
-
   deploy:
-    needs: build
     runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Debug Info
+        run: |
+          echo "Current directory:"
+          pwd
+          echo "Directory contents:"
+          ls -la
+          echo "Git status:"
+          git status
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: .
+
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2 
+        uses: actions/deploy-pages@v2
+        with:
+          token: ${{ github.token }} 
